--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Elden Ring Lore</title>
-        <link rel="stylesheet" type='text/css' href="{% static 'elden_ring_lore\static\css\style.css' %}">
+        <link rel="stylesheet" type='text/css' href="{% static 'elden_ring_lore/static/css/style.css' %}">
         <!-- Font Awesome -->
         <link
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -34,7 +34,7 @@
 <div
   class="bg-image"
   style="
-        background-image: url('{% static "elden_ring_lore\static\images\er-godwyn-the-golden-assassination.jpg" %}');
+        background-image: url('{% static "elden_ring_lore/static/images/er-godwyn-the-golden-assassination.jpg" %}');
         height: 100vh;">
     <div class="mask" style="background-color: rgba(0, 0, 0, 0.6);">
 <!-- Background image -->
