--- a/base/templates/base/group.html
+++ b/base/templates/base/group.html
@@ -6,22 +6,22 @@
             <div class="col-9">
                 
                     <a href="/lore/1/" style="text-decoration:none;">
-                        <img src="elden_ring_lore/static/groups/places.jpg" class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>  
+                        <img src="{% static 'elden_ring_lore/static/groups/places.jpg' %}" class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>  
                 
                     <a href="/lore/2/" style="text-decoration:none;">
-                        <img src="elden_ring_lore/static/groups/groups.jpg" class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>  
+                        <img src="{% static 'elden_ring_lore/static/groups/groups.jpg' %}" class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>  
                 
                     <a href="/lore/3/" style="text-decoration:none;">
-                        <img src="elden_ring_lore/static/groups/people.jpg" class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>  
+                        <img src="{% static 'elden_ring_lore/static/groups/people.jpg' %}" class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>  
                 
                     <a href="/lore/4/" style="text-decoration:none;">
-                        <img src="elden_ring_lore/static/groups/events.jpg" class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>  
+                        <img src="{% static 'elden_ring_lore/static/groups/events.jpg' %}" class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>  
                 
                     <a href="/lore/5/" style="text-decoration:none;">
-                        <img src="elden_ring_lore/static/groups/other.jpg" class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>  
+                        <img src="{% static 'elden_ring_lore/static/groups/other.jpg' %}" class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>  
                 
                     <a href="/lore/6/" style="text-decoration:none;">
-                        <img src="elden_ring_lore/static/groups/creatures.jpg" class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>  
+                        <img src="{% static 'elden_ring_lore/static/groups/creatures.jpg' %}" class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>  
                 
             </div>
         </div>
