--- a/base/templates/base/group.html
+++ b/base/templates/base/group.html
@@ -1,28 +1,22 @@
 {% extends 'base/base.html'%}
+{% load static %}
 {% block group %}
 <div class="container overflow-hidden">
     <div class="vh-100 d-flex align-items-center">
         <div class="row justify-content-center">
-            <div class="col-9">
-                
+            <div class="col-9 justify-content-center">
                     <a href="/lore/1/" style="text-decoration:none;">
-                        <img src="{% static 'elden_ring_lore/static/groups/places.jpg' %}" class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>  
-                
+                        <img src="{% static 'elden_ring_lore/static/groups/places.jpg' %}" class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>
                     <a href="/lore/2/" style="text-decoration:none;">
-                        <img src="{% static 'elden_ring_lore/static/groups/groups.jpg' %}" class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>  
-                
+                        <img src="{% static 'elden_ring_lore/static/groups/groups.jpg' %}" class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>
                     <a href="/lore/3/" style="text-decoration:none;">
-                        <img src="{% static 'elden_ring_lore/static/groups/people.jpg' %}" class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>  
-                
+                        <img src="{% static 'elden_ring_lore/static/groups/people.jpg' %}" class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>
                     <a href="/lore/4/" style="text-decoration:none;">
-                        <img src="{% static 'elden_ring_lore/static/groups/events.jpg' %}" class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>  
-                
+                        <img src="{% static 'elden_ring_lore/static/groups/events.jpg' %}" class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>
                     <a href="/lore/5/" style="text-decoration:none;">
-                        <img src="{% static 'elden_ring_lore/static/groups/other.jpg' %}" class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>  
-                
+                        <img src="{% static 'elden_ring_lore/static/groups/other.jpg' %}" class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>
                     <a href="/lore/6/" style="text-decoration:none;">
-                        <img src="{% static 'elden_ring_lore/static/groups/creatures.jpg' %}" class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>  
-                
+                        <img src="{% static 'elden_ring_lore/static/groups/creatures.jpg' %}" class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>
             </div>
         </div>
     </div>
@@ -30,7 +24,7 @@
 {% endblock %}
 
 
-{% comment %} {% block group %}
+{% block group %}
 <div class="container overflow-hidden">
     <div class="vh-100 d-flex align-items-center">
         <div class="row justify-content-center">
@@ -43,4 +37,4 @@
         </div>
     </div>
 </div>
-{% endblock %} {% endcomment %}
+{% endblock %}
