--- a/base/templates/base/group.html
+++ b/base/templates/base/group.html
@@ -24,7 +24,7 @@
 {% endblock %}
 
 
-{% block group %}
+{% comment %} {% block group %}
 <div class="container overflow-hidden">
     <div class="vh-100 d-flex align-items-center">
         <div class="row justify-content-center">
@@ -37,4 +37,4 @@
         </div>
     </div>
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
