--- a/base/templates/base/group.html
+++ b/base/templates/base/group.html
@@ -3,8 +3,8 @@
 {% block group %}
 <div class="container overflow-hidden">
     <div class="vh-100 d-flex align-items-center">
-        <div class="row justify-content-center">
-            <div class="col-9 justify-content-center">
+        <div class="row d-flex justify-content-center">
+            <div class="col-9 text-center">
                     <a href="/lore/1/" style="text-decoration:none;">
                         <img src="{% static 'elden_ring_lore/static/groups/places.jpg' %}" class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>
                     <a href="/lore/2/" style="text-decoration:none;">
