--- a/base/templates/base/lore_list.html
+++ b/base/templates/base/lore_list.html
@@ -12,7 +12,7 @@
                     <tbody>
                         {% for item in lore_list %}
                         <tr> 
-                            <td><a style="text-decoration:none" href="{% url 'lores:loreitems' item.id %}">{{item}}</a></td>
+                            <td><a style="text-decoration:none" href="{% url 'lores:loreitems' item.id %}"><h1 class="responsive-font-tables">{{item}}</h1></a></td>
                         </tr>
                         {% endfor %}
                     </tbody>
