--- a/static/elden_ring_lore/static/css/style.css
+++ b/static/elden_ring_lore/static/css/style.css
@@ -1,9 +1,13 @@
+body {
+    overflow: auto;
+}
 
 a {
-    text-decoration:none;
+    text-decoration: none;
 }
+
 .logo {
-    background-image: url("Site-logo.png") ;
+    background-image: url("Site-logo.png");
     background-repeat: no-repeat;
     background-size: cover;
     padding: 0px;
@@ -13,14 +17,44 @@ a {
     left: 35%;
     position: absolute;
 }
+
 table.display .tableheader tr th {
     color: orange;
     text-align: center;
     font-size: 30px;
-  }
-  .dataTables_paginate {
+}
+
+.dataTables_paginate {
     margin-top: 15px;
     position: absolute;
     text-align: left;
     left: 10%;
+}
+
+@media screen and (max-width: 767px) {
+    li.paginate_button.previous {
+        display: inline;
+    }
+
+    li.paginate_button.next {
+        display: inline;
+    }
+
+    li.paginate_button {
+        display: none;
+    }
+}
+
+/* If the screen size is 1200px wide or more, set the font-size to 25px */
+@media (min-width: 1200px) {
+    .responsive-font-tables {
+        font-size: 25px;
+    }
+}
+
+/* If the screen size is smaller than 1200px, set the font-size to 20px */
+@media (max-width: 1199.98px) {
+    .responsive-font-tables {
+        font-size: 20px;
+    }
 }
