--- a/base/templates/base/group.html
+++ b/base/templates/base/group.html
@@ -1,8 +1,8 @@
 {% extends 'base/base.html'%}
 {% load static %}
 {% block group %}
-<div class="container overflow-hidden">
-    <div class="vh-100 d-flex align-items-center">
+<div class="container">
+    <div class="vh-100% d-flex align-items-center">
         <div class="row d-flex justify-content-center">
             <div class="col-9 text-center">
                     <a href="/lore/1/" style="text-decoration:none;">
