--- a/base/templates/base/item.html
+++ b/base/templates/base/item.html
@@ -3,9 +3,9 @@
 {% load static %}
 {% block content%}
 
-<div class="container overflow-hidden mt-70" style="width: 50%;">
-    <div class="vh-100 align-items-start mb-70">
-        <div class="row justify-content-start " style="position:relative; top:150px;">
+<div class="container-fluid overflow-hidden mt-70" style="width: 50%;">
+    <div class="vh-100">
+        <div class="row justify-content-center mx-5">
             <table id="table" class="display">
                 <thead class="tableheader">
                     <tr><a href="{{request.META.HTTP_REFERER|escape}}">Back</a>
@@ -15,8 +15,10 @@
                 <tbody>
                     {% for item in loreitems %}
                     <tr>
-                        <td><button type="button" class="btn btn-outline-warning" data-mdb-toggle="modal" data-mdb-target="#erModal{{ forloop.counter }}">
-                            {{ item.item_title }}
+                        <td><button type="button" class="btn btn-outline-warning border-0" style="white-space: normal; font-size : 17px;" data-mdb-toggle="modal" data-mdb-target="#erModal{{ forloop.counter }}">
+                            {% comment %} <p1 style="font-size : 17px; width: 100%; height: 100px; "> {% endcomment %}
+                                <style="text-align:left; width:100%; overflow: hidden;">{{ item.item_title }}</style>
+                            {% comment %} </p1> {% endcomment %}
                         </button></td>
                     </tr>
                     {% endfor %}
