--- a/base/templates/base/lore_list.html
+++ b/base/templates/base/lore_list.html
@@ -1,12 +1,12 @@
 {% extends 'base/base.html'%}
 {% block items %}
 <div class="container overflow-hidden mt-70" style="width: 50%;">
-    <div class="vh-100 d-flex align-items-start mb-70">
-        <div class="row justify-content-start mx-5" style="position:relative; top: 170px;">
+    <div class="vh-100">
+        <div class="row justify-content-center mx-5">
                 <h3 class="text-white mb-0"><table id="table" class="display" style="width:100%">
                     <thead>
                         <tr>
-                            <th>{{ title.0 }}</th>
+                            <th class="text-center">{{ title.0 }}</th>
                         </tr>
                     </thead>
                     <tbody>
