--- a/staticfiles/elden_ring_lore/static/css/style.css
+++ b/staticfiles/elden_ring_lore/static/css/style.css
@@ -1,26 +1,105 @@
-
 a {
-    text-decoration:none;
+    text-decoration: none;
 }
-.logo {
-    background-image: url("Site-logo.png") ;
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding: 0px;
-    margin: 0px;
-    width: 550px;
-    height: 150px;
-    left: 35%;
-    position: absolute;
+
+@media (min-width: 1200px) {
+    .logo {
+        background-image: url("Site-logo.png");
+        background-repeat: no-repeat;
+        background-size: cover;
+        padding: 0px;
+        margin: 0px;
+        width: 550px;
+        height: 150px;
+        left: 35%;
+        /* position: relative; */
+        position: sticky;
+    }
+
+    .responsive-font-tables {
+        font-size: 25px;
+    }
 }
+
+@media (max-width: 1199.98px) {
+    .logo {
+        background-image: url("Site-logo.png");
+        background-repeat: no-repeat;
+        background-size: cover;
+        padding: 0px;
+        margin: 0px;
+        width: 184px;
+        height: 50px;
+        left: 35%;
+        /* position: relative; */
+        position: sticky;
+    }
+
+    .responsive-font-tables {
+        font-size: 20px;
+    }
+}
+
+
 table.display .tableheader tr th {
-    color: orange;
-    text-align: center;
-    font-size: 30px;
-  }
-  .dataTables_paginate {
+    color: rgb(209, 127, 20);
+    text-align: end;
+    font-size: 28px;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-end;
+}
+
+.dataTables_paginate {
     margin-top: 15px;
+    /* position: relative; */
+    position: fixed;
+    text-align: center;
+    /* left: 50%; */
+}
+
+@media screen and (max-width: 767px) {
+    li.paginate_button.previous {
+        display: inline;
+    }
+
+    li.paginate_button.next {
+        display: inline;
+    }
+
+    li.paginate_button {
+        display: none;
+    }
+}
+
+.bg-image:after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
     position: absolute;
-    text-align: left;
-    left: 10%;
+    top: 0;
+    left: 0;
+    z-index: 1
+}
+
+.bg-image>* {
+    position: relative;
+    z-index: 2;
+}
+
+.modal-backdrop {
+    /* - no overlay */
+    display: none;
+}
+
+.modal {
+    /* - custom overlay */
+    background-color: rgba(10, 10, 10, 0.45);
+}
+
+.pagination {
+    --bs-pagination-padding-x: 0.4rem;
+    --bs-pagination-padding-y: 0.3rem;
 }
