--- a/base/templates/base/group.html
+++ b/base/templates/base/group.html
@@ -1,21 +1,21 @@
 {% extends 'base/base.html'%}
 {% load static %}
 {% block group %}
-<div class="container">
+<div class="container-group">
     <div class="vh-100% d-flex align-items-center">
         <div class="row d-flex justify-content-center">
-            <div class="col-9 text-center">
-                    <a href="/lore/1/" style="text-decoration:none;">
+            <div class="col-9 text-center ">
+                    <a class="hover-zoom ripple" href="/lore/1/" style="text-decoration:none;">
                         <img src="{% static 'elden_ring_lore/static/groups/places.jpg' %}" class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>
-                    <a href="/lore/2/" style="text-decoration:none;">
+                    <a class="hover-zoom ripple" href="/lore/2/" style="text-decoration:none;">
                         <img src="{% static 'elden_ring_lore/static/groups/groups.jpg' %}" class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>
-                    <a href="/lore/3/" style="text-decoration:none;">
+                    <a class="hover-zoom ripple" href="/lore/3/" style="text-decoration:none;">
                         <img src="{% static 'elden_ring_lore/static/groups/people.jpg' %}" class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>
-                    <a href="/lore/4/" style="text-decoration:none;">
+                    <a class="hover-zoom ripple" href="/lore/4/" style="text-decoration:none;">
                         <img src="{% static 'elden_ring_lore/static/groups/events.jpg' %}" class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>
-                    <a href="/lore/5/" style="text-decoration:none;">
+                    <a class="hover-zoom ripple" href="/lore/5/" style="text-decoration:none;">
                         <img src="{% static 'elden_ring_lore/static/groups/other.jpg' %}" class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>
-                    <a href="/lore/6/" style="text-decoration:none;">
+                    <a class="hover-zoom ripple" href="/lore/6/" style="text-decoration:none;">
                         <img src="{% static 'elden_ring_lore/static/groups/creatures.jpg' %}" class="img-fluid hover-shadow rounded-4 my-1 mx-1"></a>
             </div>
         </div>
