--- a/base/templates/base/lore_list.html
+++ b/base/templates/base/lore_list.html
@@ -1,9 +1,9 @@
 {% extends 'base/base.html'%}
 {% block items %}
-<div class="container overflow-hidden mt-70" style="width: 50%;">
+<div class="container overflow-hidden mt-70">
     <div class="vh-100">
         <div class="row justify-content-center mx-5">
-                <h3 class="text-white mb-0"><table id="table" class="display" style="width:100%">
+                <h3 class="text-white mb-0"><table data-page-length='15' id="table" class="display" style="width:100%">
                     <thead>
                         <tr>
                             <th class="text-center">{{ title.0 }}</th>
@@ -12,7 +12,7 @@
                     <tbody>
                         {% for item in lore_list %}
                         <tr> 
-                            <td><a style="text-decoration:none" href="{% url 'lores:loreitems' item.id %}"><class="responsive-font-tables">{{item}}</a></td>
+                            <td><a style="text-decoration:none" href="{% url 'lores:loreitems' item.id %}">{{item}}</a></td>
                         </tr>
                         {% endfor %}
                     </tbody>
