--- a/base/templates/base/lore_list.html
+++ b/base/templates/base/lore_list.html
@@ -2,7 +2,7 @@
 {% block items %}
 <div class="container overflow-hidden mt-70">
     <div class="vh-100">
-        <div class="row justify-content-center mx-5">
+        <div class="row justify-content-center margin-test">
                 <h3 class="text-white mb-0"><table data-page-length='15' id="table" class="display" style="width:100%">
                     <thead>
                         <tr>
