--- a/base/templates/base/item.html
+++ b/base/templates/base/item.html
@@ -5,8 +5,8 @@
 
 <div class="container-fluid overflow-hidden mt-70">
     <div class="vh-100">
-        <div class="row justify-content-center mx-5">
-            <table data-page-length='15' id="table" class="display"><span id="footer"></span>
+        <div class="row justify-content-center margin-test">
+            <table data-page-length='15' id="table" class="display">
                 <thead class="tableheader">
                     <tr><a href="{{request.META.HTTP_REFERER|escape}}">Back</a>
                         <th>{{ naziv.0 }}</th>
@@ -16,9 +16,9 @@
                     {% for item in loreitems %}
                     <tr>
                         <td><button type="button" class="btn btn-outline-warning mb-1"  data-mdb-toggle="modal" data-mdb-target="#erModal{{ forloop.counter }}">
-                            {% comment %} <p1 style="font-size : 17px; width: 100%; height: 100px; "> {% endcomment %}
-                                <style="text-align:left; width:100%; overflow: hidden;">{{ item.item_title }}</style>
-                            {% comment %} </p1> {% endcomment %}
+                            
+                                {{ item.item_title }}
+                            
                         </button></td>
                     </tr>
                     {% endfor %}
