--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -37,15 +37,10 @@
 <div class="slika-iza">
   <div class="logo-slika">
     <a href="/">
-      <img src="{% static 'elden_ring_lore/static/css/Site-logo.png'%}"/>
+      <img src="{% static 'elden_ring_lore/static/css/Site-logo.png'%}" alt='logo.png'/>
       </a>
   </div>
-  
-
-    <div>
       {% block group%}{% endblock %}{% block items%}{% endblock %}{% block content %}{% endblock %}
-      
-    </div>
 </div>
 
 
