--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -6,7 +6,6 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Elden Ring Lore</title>
-        <link rel="stylesheet" type='text/css' href="{% static 'elden_ring_lore/static/css/style.css' %}">
         <!-- Font Awesome -->
         <link
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -23,9 +22,10 @@
         rel="stylesheet"
         />
         <!-- DataTable -->
-        <link href="https://cdn.datatables.net/1.13.3/css/dataTables.bootstrap5.min.css"/>
-        <link href="https://cdn.datatables.net/responsive/2.4.0/css/responsive.bootstrap5.min.css"/>
+        {% comment %} <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.3/css/dataTables.bootstrap5.min.css"/> {% endcomment %}
+        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.4.0/css/responsive.bootstrap5.min.css"/>
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" type='text/css' href="{% static 'elden_ring_lore/static/css/style.css' %}">
         <style>
           body,html {
                 height: 100vh;
@@ -72,7 +72,7 @@
 
 
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js"></script>
-<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.js"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/1.13.1/js/dataTables.bootstrap5.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.0.1/mdb.min.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/responsive/2.4.0/js/dataTables.responsive.js"></script>
