--- a/base/templates/base/lore_list.html
+++ b/base/templates/base/lore_list.html
@@ -6,13 +6,13 @@
                 <h3 class="text-white mb-0"><table data-page-length='15' id="table" class="display" style="width:100%">
                     <thead>
                         <tr>
-                            <th class="text-center">{{ title.0 }}</th>
+                            <th class="text-center erlorefont">{{ title.0 }}</th>
                         </tr>
                     </thead>
                     <tbody>
                         {% for item in lore_list %}
                         <tr> 
-                            <td><a style="text-decoration:none" href="{% url 'lores:loreitems' item.id %}">{{item}}</a></td>
+                            <td class="erlorefont"><a style="text-decoration:none" href="{% url 'lores:loreitems' item.id %}">{{item}}</a></td>
                         </tr>
                         {% endfor %}
                     </tbody>
