--- a/static/elden_ring_lore/static/css/style.css
+++ b/static/elden_ring_lore/static/css/style.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: Garamond_Premier;
+    src: url('garamond_premier.ttf');
+}
+
+.erlorefont {
+    font-family: Garamond_Premier;
+}
+
 body,
 html {
     height: 100%;
@@ -30,13 +39,92 @@ a {
 .modal {
     /* - custom overlay */
     background-color: rgba(10, 10, 10, 0.45);
+    --bs-modal-bg: #fff0;
 }
+
+.modal-body {
+    /* background-blend-mode: darken; */
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)), url('elden-ring-raani.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+    color: #fffb00;
+
+}
+
+.modal-title {
+    color: #fffb00;
+}
+
+.modal-content {
+    --mdb-modal-box-shadow: 0 2px 15px -3px rgba(0, 0, 0, 0.815), 0 10px 20px -2px rgba(15, 2, 2, 0.466);
+    border: 0;
+    box-shadow: var(--mdb-modal-box-shadow);
+}
+
+.modal-footer {
+    background-color: #e1fd0d0e;
+}
+
+.modal-header {
+    background-color: #000000ec;
+}
+
+.pagination {
+    --bs-pagination-padding-x: 0.75rem;
+    --bs-pagination-padding-y: 0.375rem;
+    --bs-pagination-font-size: 1rem;
+    --bs-pagination-color: #e3fd0d;
+    --bs-pagination-bg: #c9b5b500;
+    /* --bs-pagination-border-width: 1px; */
+    --bs-pagination-border-color: #c9b5b500;
+    --bs-pagination-border-radius: 0.375rem;
+    --bs-pagination-hover-color: #0a45ca;
+    --bs-pagination-hover-bg: ffc107;
+    --bs-pagination-hover-border-color: #cac40a;
+    --bs-pagination-focus-color: #9f800f;
+    --bs-pagination-focus-bg: #d7ab0b12;
+    --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(252, 253, 13, 0.25);
+    --bs-pagination-active-color: #fff;
+    --bs-pagination-active-bg: #fdf60d66;
+    --bs-pagination-active-border-color: #0d6efd00;
+    --bs-pagination-disabled-color: #6c757d;
+    --bs-pagination-disabled-bg: #2a0f0f00;
+    --bs-pagination-disabled-border-color: #1a8dff00;
+    /* display: flex; */
+    padding-left: 0;
+    list-style: none;
+}
+
+table.display .tableheader tr th {
+    color: rgb(209, 127, 20);
+    font-size: 28px;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-end;
+    justify-content: center;
+    text-align: center;
+}
+
+.dataTables_paginate {
+    margin-top: 10px;
+    justify-content: center;
+    position: relative;
+    text-align: center;
+}
+
+.btn-outline-warning {
+    --bs-btn-color: #fff007e3;
+    --bs-btn-hover-bg: #fff907;
+}
+
 
 @media (min-width: 1199.99px) {
 
     .margin-test {
-        margin-right: 5;
-        margin-top: 5;
+        margin-right: 5px;
+        margin-top: 5px;
 
     }
 
@@ -100,9 +188,10 @@ a {
         display: inline;
     }
 
-    .pagination {
-        justify-content: left;
+    .div.dataTables_wrapper .div.dataTables_paginate .ul.pagination {
+        justify-content: flex-start !important;
     }
+
 
 }
 
@@ -112,8 +201,8 @@ a {
 @media (min-width:830px) and (max-width:1199.98px) {
 
     .margin-test {
-        margin-right: 5;
-        margin-top: 5;
+        margin-right: 5px;
+        margin-top: 5px;
     }
 
 
@@ -171,7 +260,7 @@ a {
     }
 
     .pagination {
-        justify-content: center;
+        justify-content: left;
     }
 
     .logo-slika a {
@@ -214,6 +303,10 @@ a {
         text-align: center;
     }
 
+    .pagination {
+        padding-top: 7px;
+    }
+
     .slika-iza {
         background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("er-godwyn-the-golden-assassination.jpg");
         position: relative;
@@ -249,20 +342,4 @@ a {
         height: 80px auto;
 
     }
-}
-
-table.display .tableheader tr th {
-    color: rgb(209, 127, 20);
-    font-size: 28px;
-    display: flex;
-    flex-wrap: wrap;
-    align-content: flex-end;
-    justify-content: center;
-    text-align: center;
-}
-
-.dataTables_paginate {
-    margin-top: 10px;
-    position: relative;
-    text-align: center;
 }
