--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -5,6 +5,7 @@
         
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Elden Ring lore connection between with most important names, places, events, etc. and items that can be find in the game">
         <title>Elden Ring Lore</title>
         <!-- Font Awesome -->
         <link
@@ -40,7 +41,7 @@
       <img src="{% static 'elden_ring_lore/static/css/Site-logo.png'%}" alt='logo.png'/>
       </a>
   </div>
-      {% block group%}{% endblock %}{% block items%}{% endblock %}{% block content %}{% endblock %}
+      {% block group%}{% endblock %}{% block items%}{% endblock %}{% block content %}{% endblock %}{% block search%}{% endblock%}
 </div>
 
 
