--- a/base/templates/base/item.html
+++ b/base/templates/base/item.html
@@ -8,7 +8,7 @@
         <div class="row justify-content-center margin-test">
             <table data-page-length='15' id="table" class="display" style="width:100%">
                 <thead class="tableheader">
-                    <tr><a href="{{request.META.HTTP_REFERER|escape}}">Back</a>
+                    <tr><div><a href="{{request.META.HTTP_REFERER|escape}}">Back</a></div>
                         <th class="erlorefont">{{ naziv.0 }}</th>
                     </tr>
                 </thead>
