--- a/base/templates/base/lore_list.html
+++ b/base/templates/base/lore_list.html
@@ -2,17 +2,26 @@
 {% block items %}
 <div class="container overflow-hidden mt-70">
     <div class="vh-100">
+        {% comment %} leaving it just in case
+            <form action="{% url 'lores:search_result' %}" method="get"> 
+            <input
+            type="search"
+            name="q"
+            placeholder="Search by title"
+            class="form-control"
+            />
+        </form> {% endcomment %}
         <div class="row justify-content-center margin-test">
                 <h3 class="text-white mb-0"><table data-page-length='15' id="table" class="display" style="width:100%">
                     <thead>
                         <tr>
-                            <th class="text-center erlorefont">{{ title.0 }}</th>
+                            <th class="text-center erlorefont" style="color:orange">{{ title.0 }}</th>
                         </tr>
                     </thead>
                     <tbody>
                         {% for item in lore_list %}
                         <tr> 
-                            <td class="erlorefont"><a style="text-decoration:none" href="{% url 'lores:loreitems' item.id %}">{{item}}</a></td>
+                            <td class="erlorefont link-warning"><a style="text-decoration:none; color:goldenrod;" href="{% url 'lores:loreitems' item.id %}">{{item}}</a></td>
                         </tr>
                         {% endfor %}
                     </tbody>
