--- a/static/elden_ring_lore/static/css/style.css
+++ b/static/elden_ring_lore/static/css/style.css
@@ -12,6 +12,9 @@ html {
     height: 100%;
 }
 
+table.dataTable tbody tr:hover a {
+    background-color: rgba(255, 255, 170, 0.26);
+}
 
 a {
     text-decoration: none;
@@ -42,6 +45,10 @@ a {
     --bs-modal-bg: #fff0;
 }
 
+.dataTables_empty {
+    color: white;
+}
+
 .modal-body {
     /* background-blend-mode: darken; */
     background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)), url('elden-ring-raani.jpg');
@@ -60,6 +67,7 @@ a {
 .modal-content {
     --mdb-modal-box-shadow: 0 2px 15px -3px rgba(0, 0, 0, 0.815), 0 10px 20px -2px rgba(15, 2, 2, 0.466);
     border: 0;
+    min-height: 413px;
     box-shadow: var(--mdb-modal-box-shadow);
 }
 
@@ -71,16 +79,16 @@ a {
     background-color: #000000ec;
 }
 
+
 .pagination {
     --bs-pagination-padding-x: 0.75rem;
     --bs-pagination-padding-y: 0.375rem;
     --bs-pagination-font-size: 1rem;
     --bs-pagination-color: #e3fd0d;
     --bs-pagination-bg: #c9b5b500;
-    /* --bs-pagination-border-width: 1px; */
     --bs-pagination-border-color: #c9b5b500;
     --bs-pagination-border-radius: 0.375rem;
-    --bs-pagination-hover-color: #0a45ca;
+    --bs-pagination-hover-color: #edfd05;
     --bs-pagination-hover-bg: ffc107;
     --bs-pagination-hover-border-color: #cac40a;
     --bs-pagination-focus-color: #9f800f;
@@ -92,7 +100,6 @@ a {
     --bs-pagination-disabled-color: #6c757d;
     --bs-pagination-disabled-bg: #2a0f0f00;
     --bs-pagination-disabled-border-color: #1a8dff00;
-    /* display: flex; */
     padding-left: 0;
     list-style: none;
 }
@@ -119,6 +126,23 @@ table.display .tableheader tr th {
     --bs-btn-hover-bg: #fff907;
 }
 
+.form-control {
+    width: 100%;
+    background-color: #fff0;
+    border: 1px solid #cac40a;
+
+}
+
+.form-control:focus {
+    color: #ffd103;
+    background-color: #cb1d1d00;
+    border-color: #fecf86;
+    outline: 0;
+    box-shadow: 0 0 0 0.25rem rgb(13 110 253 / 25%);
+    background-color: #fff0;
+    border: 1px solid #ffae00;
+    width: 100%;
+}
 
 @media (min-width: 1199.99px) {
 
@@ -192,6 +216,17 @@ table.display .tableheader tr th {
         justify-content: flex-start !important;
     }
 
+    .dataTables_filter {
+        font-size: 17px;
+        color: #cac40a
+    }
+
+
+    .form_control.form-control-sm {
+        opacity: 0;
+    }
+
+
 
 }
 
@@ -199,6 +234,10 @@ table.display .tableheader tr th {
 
 
 @media (min-width:830px) and (max-width:1199.98px) {
+    .dataTables_filter {
+        font-size: 15px;
+        color: #cac40a
+    }
 
     .margin-test {
         margin-right: 5px;
@@ -271,10 +310,15 @@ table.display .tableheader tr th {
         height: 140px auto;
 
     }
+
 }
 
 
 @media (max-width: 829.98px) {
+    .dataTables_filter {
+        font-size: 14px;
+        color: #cac40a
+    }
 
     div {
         overflow-y: hidden;
