--- a/base/templates/base/item.html
+++ b/base/templates/base/item.html
@@ -34,7 +34,7 @@
                         <h5 class="modal-title" id="ERModalLabel">{{ item.item_title }}</h5>
                         </div>
                         <div class="modal-body img-responsive">
-                        <p>{{ item.item_description}}</p>
+                        <p>{{ item.item_description|linebreaksbr }}</p>
                         </div>
                         <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">Close</button>
